# haskell-example

./: README.org
conduit-streaming/: ChangeLog.md  README.md  conduit-streaming.cabal
conduit-streaming/src/: Lib.hs
conduit-ui/: .gitignore  default.nix
conduit-ui/.obelisk/impl/: github.json
conduit-ui/backend/: backend.cabal
conduit-ui/backend/src/: Backend.hs  Fn.hs
conduit-ui/backend/src/Backend/: Conduit.hs  HttpServer.hs  Streaming.hs  WebSocketServer.hs
conduit-ui/common/: common.cabal
conduit-ui/common/src/Common/: Api.hs  Class.hs  ExampleData.hs  Route.hs  Types.hs  WebSocketMessage.hs
conduit-ui/common/src/Common/Types/: Base.hs  DataNetwork.hs  DataSandbox.hs  EventLake.hs
conduit-ui/config/common/: route
conduit-ui/dep/labels-json/src/Labels/: JSON.hs
conduit-ui/dep/libssh2-hs/hlibssh2/: LICENSE  Makefile  hlibssh2.cabal
conduit-ui/dep/libssh2-hs/hlibssh2/include/: gcrypt-fix.h  libssh2_local.h
conduit-ui/dep/libssh2-hs/hlibssh2/src/Network/SSH/Client/LibSSH2/: Types.chs
conduit-ui/dep/odpic-raw/: odpic-raw.cabal
conduit-ui/dep/odpic-raw/src/Database/Dpi/: Sql.hs  Util.hs
conduit-ui/dep/odpic-raw/test/: Spec.hs
conduit-ui/frontend/: frontend.cabal
conduit-ui/frontend/src/: Frontend.hs
conduit-ui/frontend/src/Frontend/: Class.hs  FrontendStateT.hs  Widget.hs
conduit-ui/frontend/src/Frontend/Page/: DataSandbox.hs
conduit-ui/frontend/src/Frontend/Page/DataNetwork/: DataCircuit.hs  DataConduit.hs  EffectEngine.hs  EventPulse.hs  LogicFragement.hs  OneClickRun.hs
conduit-ui/frontend/src/Frontend/Page/DataSandbox/DataService/FileService/: SFTP.hs
conduit-ui/frontend/src/Frontend/Page/DataSandbox/DataSource/: SQLCursor.hs
conduit-ui/frontend/src/Frontend/Page/DataSource/: SQLCursor.hs
conduit-ui/frontend/src/Frontend/Page/EventLake/: CronTimer.hs
conduit-ui/frontend/src/Frontend/Page/EventSource/: CronTimer.hs
conduit-ui/frontend/src/Frontend/Page/FileService/: MinIO.hs
conduit-ui/statistics-chart/: statistics-chart.cabal
conduit-ui/statistics-chart/src/: Main.hs
conduit-ui/xgboost-ffi/: cheetsheet.txt  default.nix  xgboost-ffi.cabal
conduit-ui/xgboost-ffi/include/xgboost/: #c_api.h#
conduit-ui/xgboost-ffi/src/: Main.hs
db-client/: .gitignore  ChangeLog.md  README.md  db-client.cabal  stack.yaml
db-client/src/: Lib.hs
db-orm/: CHANGELOG.md  LICENSE  cheetsheet.txt  db-orm.cabal  default.nix
db-to-yaml/: .gitignore  CHANGELOG.md  db-to-yaml.cabal  default.nix
db-to-yaml/src/: Main.hs
db-to-yaml/src/Database/: Oracle.hs
db-to-yaml/src/Database/Oracle/: OCIConstants.hs  OCIFunctions.hs  Util.hs
es-benchmark/: .gitignore  CHANGELOG.md  cheetsheet.txt  es-benchmark.cabal  hbenchmark.cabal  package.sh  result  run.txt
es-benchmark/src/: Main.hs
https-client/: .gitignore  ChangeLog.md  README.md  https-client.cabal
https-client/src/: Lib.hs
hweixin/: hweixin.cabal  stack.yaml
hweixin/app/: Class.hs  Extensions.hs  Main.hs  Types.hs
hweixin/src/: CQREncode.hsc
kafka-transformers/: .gitignore  ChangeLog.md  README.md  kafka-transformers.buildinfo  kafka-transformers.cabal  shell.nix  stack.yaml
kafka-transformers/src/: Lib.hs
kafka-transformers/src/FFI/: CKafka.chs
minio-migration/: default.nix  minio-migration.cabal
minio-migration/src/: Main.hs
minio-migration/src/Network/: Minio.hs
minio-migration/src/Network/Minio/: API.hs  Data.hs  ListOps.hs
oracle-to-yaml/: CHANGELOG.md  cabal.project.local  cheetsheet.txt  default.nix  oracle-to-yaml.cabal
oracle-to-yaml/src/: Main.hs
oracle-to-yaml/src/Database/: Dpi.hs
oracle-to-yaml/src/Database/Dpi/: Field.hs  Internal.chs  Prelude.hs
postgresql-to-minio/: default.nix  postgresql-to-minio.cabal
postgresql-to-minio/minio-hs/: minio-hs.cabal
postgresql-to-minio/minio-hs/src/Network/: Minio.hs
postgresql-to-minio/src/: Main.hs  Main.hs.bk
postgresql-to-minio/src/Labels/: JSON.hs
rest-api/: .gitignore  ChangeLog.md  rest-api.cabal  stack.yaml
rest-api/src/: Lib.hs
sftp-conduit/: default.nix  sftp-conduit.cabal
sftp-conduit/dep/libssh2-hs/hlibssh2/: ssh-client.hs
sftp-conduit/dep/libssh2-hs/hlibssh2/src/Network/SSH/Client/: LibSSH2.hs
sftp-conduit/dep/libssh2-hs/hlibssh2/src/Network/SSH/Client/LibSSH2/: Errors.chs  Foreign.chs  GCrypt.hs  WaitSocket.hs
sftp-conduit/dep/libssh2-hs/hlibssh2/src/Network/SSH/Client/LibSSH2/FFI/: gcrypt-fix.c
sftp-conduit/dep/libssh2-hs/libssh2-conduit/: hs-ssh-forwarder.hs  ssh-client.hs
sftp-conduit/dep/libssh2-hs/libssh2-conduit/Network/SSH/Client/LibSSH2/: Conduit.hs
sftp-conduit/src/: Main.hs
statistics-chart/: default.nix
stock-analyzer/: .gitignore  ChangeLog.md  README.md  stack.yaml
stock-analyzer/app/: JSON.hs  Main.hs  Utils.hs
tryDbStuff/: .gitignore  ChangeLog.md  Haskell的数据库操作(HDBC).md  Haskell的数据库操作(persistent).md  README.md  package.yaml  stack.yaml
tryDbStuff/src/: TryHDBC.hs  TryPersistent.hs  TryRedis.hs
ws-dashboard/: .dir-locals.el  .gitignore  cheetsheet.org  default.nix
ws-dashboard/backend/src/: Backend.hs
ws-dashboard/common/src/Common/: Route.hs  Types.hs
ws-dashboard/dep/echarts-jsdom/: github.json
ws-dashboard/dep/reflex-dom-echarts/: github.json
ws-dashboard/frontend/: frontend.cabal
ws-dashboard/frontend/src/: Frontend.hs
xgboost-ffi/: LICENSE  cabal.project.local
xgboost-ffi/src/: XGBoostFFI.chs
