name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: 
      base
    , common
    , frontend
    , obelisk-backend
    , obelisk-route

    , bytestring
    , either
    , text
    , string-conversions
    , heredoc
    , template-haskell
    , aeson
    , labels
    , labels-json
    , transformers
    , mtl
    , resourcet
    , conduit
    , monad-loops
    , hint
    , hasql
    , stm-chans
    , stm-conduit
    , unliftio
    , snap-core
    , snap-server
    , snap
    , servant-snap
    , websockets-snap
    , transient
    , regex-tdfa
    , minio-hs
    , hlibssh2
    , odpic-raw

  exposed-modules:
    Backend
  ghc-options: -Wall
  default-extensions:
      OverloadedStrings
    , OverloadedLabels
    , GADTs
    , TypeOperators
    , TemplateHaskell
    , TypeApplications
    , QuasiQuotes


executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , common
               , frontend
               , obelisk-backend
               , transient
